--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -3,14 +3,22 @@
     src: url('https://fonts.gstatic.com/s/fredokaone/v5/k3kUo8kEI-tA1RRcTZGmTlHGCac.woff2') format('woff2');
 }
 
-body {
-    background-color: #555964;
+* {
     margin: 0;
     padding: 0;
 }
 
+body {
+    background-color: #eee;
+}
+
 a {
     text-decoration: none;
+    color: inherit;
+}
+
+ul {
+    list-style: none;
 }
 
 .clearfix::after {
@@ -51,12 +59,6 @@ a {
     margin-left: 4px;
 }
 
-.topNavBar nav>ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
 .topNavBar nav>ul>li {
     float: left;
     margin-left: 17px;
@@ -80,16 +82,103 @@ a {
 
 .banner {
     height: 516px;
-    background-image:url(../img/rs-cover.jpg);
+    background-image: url(../img/rs-cover.jpg);
     background-position: center center;
     background-size: cover;
 }
 
-.banner .masker {
+.banner>.masker {
     height: 100%;
     background: rgb(44, 51, 64, 0.8);
 }
 
 .userCard {
+    max-width: 940px;
+    margin-left: auto;
+    margin-right: auto;
+}
 
+.userCard>.avatarAndProfile {
+    background: white;
+    padding: 50px;
+}
+
+.avatarAndProfile>.avatar {
+    float: left;
+}
+
+.avatarAndProfile>.profile {
+    float: left;
+    margin-left: 65px;
+    max-width: 474px;
+}
+
+.avatarAndProfile>.profile>.welcome {
+    background-color: #E8676B;
+    color: #fff;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 5px 12px;
+    position: relative;
+    display: inline-block;
+}
+
+.welcome .triangle {
+    display: inline-block;
+    width: 0;
+    border: 8px solid transparent;
+    border-left-color: #E8676B;
+    border-top-width: 0;
+    position: absolute;
+    top: 100%;
+    left: 5px;
+}
+
+.avatarAndProfile>.profile>h1 {
+    margin-top: 28px;
+}
+
+.avatarAndProfile>.profile>hr {
+    height: 0;
+    border: none;
+    border-bottom: 1px solid #DEDEDE;
+    margin-top: 22px;
+    margin-bottom: 28px;
+}
+
+.avatarAndProfile>.profile dl dt {
+    float: left;
+    width: 30%;
+    font-weight: bold;
+    padding: 12px 0;
+}
+
+.avatarAndProfile>.profile dl dd {
+    float: left;
+    width: 70%;
+    color: #9DA0A7;
+    padding: 12px 0;
+}
+
+.userCard .medi {
+    background-color: #E8676B;
+    text-align: center;
+}
+
+.userCard .medi a {
+    border-radius: 50%;
+    display: inline-block; /* 没加时 a 标签没能把 svg 完全包住 */
+    padding: 12px;
+    margin: 16px;
+}
+
+.userCard .medi a:hover {
+    background-color: rgba(0, 0, 0, 0.1); 
+}
+
+.userCard .medi svg {
+    width: 28px;
+    height: 28px;
+    fill: #fff;
+    vertical-align: top;
 }
