Fix: 背景颜色透明度 rgba 不是 rgb

--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -89,7 +89,7 @@ ul {
 
 .banner>.masker {
     height: 100%;
-    background: rgb(44, 51, 64, 0.8);
+    background: rgba(44, 51, 64, 0.8);
 }
 
 .userCard {
