--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -97,14 +97,14 @@ ul {
 }
 
 .userCard {
-    max-width: 940px;
+    max-width: 930px;
     margin-left: auto;
     margin-right: auto;
 }
 
 .userCard>.avatarAndProfile {
     background: white;
-    padding: 50px;
+    padding: 56px 50px 30px;
 }
 
 .avatarAndProfile>.avatar {
@@ -114,7 +114,7 @@ ul {
 .avatarAndProfile>.profile {
     float: left;
     margin-left: 65px;
-    max-width: 474px;
+    max-width: 465px;
 }
 
 .avatarAndProfile>.profile>.welcome {
@@ -140,6 +140,7 @@ ul {
 
 .avatarAndProfile>.profile>h1 {
     margin-top: 28px;
+    color: #3d4451;
 }
 
 .avatarAndProfile>.profile>hr {
