--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -96,6 +96,10 @@ ul {
     background: rgba(44, 51, 64, 0.8);
 }
 
+body>main {
+    margin-top: -345px;
+}
+
 .userCard {
     max-width: 930px;
     margin-left: auto;
@@ -156,7 +160,8 @@ ul {
     width: 30%;
     font-weight: bold;
     padding: 12px 0;
-    line-height: 18px; /* ubuntu上查看时发现这边的字体变高，发生错位（不同系统查看字体的行高会不一样） */
+    line-height: 18px;
+    /* ubuntu上查看时发现这边的字体变高，发生错位（不同系统查看字体的行高会不一样） */
 }
 
 .avatarAndProfile>.profile dl dd {
@@ -173,13 +178,14 @@ ul {
 
 .userCard .media a {
     border-radius: 50%;
-    display: inline-block; /* 没加时 a 标签没能把 svg 完全包住 */
+    display: inline-block;
+    /* 没加时 a 标签没能把 svg 完全包住 */
     padding: 12px;
     margin: 16px;
 }
 
 .userCard .media a:hover {
-    background-color: rgba(0, 0, 0, 0.1); 
+    background-color: rgba(0, 0, 0, 0.1);
 }
 
 .userCard .media svg {
@@ -187,4 +193,32 @@ ul {
     height: 28px;
     fill: #fff;
     vertical-align: top;
+}
+
+.downloadResumeWrapper {
+    text-align: center;
+}
+
+.downloadResumeWrapper>.downloadResume:hover {
+    box-shadow: 0px 3px 13px 2px rgba(0, 0, 0, 0.2)
+}
+
+.downloadResumeWrapper>.downloadResume {
+    margin: 32px 0 40px;
+    color: #3d4451;
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 16px;
+    padding: 21px 55px;
+    display: inline-block;
+    border: 1px solid #ccc;
+    transition: box-shadow 0.3s
+}
+
+main p.desc {
+    max-width: 930px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    font-size: 18px;
 }
