--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -265,37 +265,40 @@ section.skills ol>li:nth-child(even) {
 }
 
 section.skills ol>li span,
-section.works ol>li {
+section.portfolio ol>li {
     font-size: 14px;
 }
 
 .progressBar {
     height: 5px;
+    border-radius: 2px;
     background: #FAE0E0;
     margin-top: 5px;
-    border-radius: 2px;
 }
 
-.progressBar>.progressBar-inner {
+.progressBar>.progress,
+section.portfolio nav .bar>.bar-inner {
     height: 100%;
     background: #E8676B;
     border-radius: 2px;
 }
 
-section.works {
+section.portfolio {
     text-align: center;
 }
 
-section.works nav {
+section.portfolio nav {
     margin-top: 35px;
 }
 
-section.works nav,
-section.works nav ol {
+section.portfolio nav,
+section.portfolio nav ol {
     display: inline-block;
+    vertical-align: top;
+    /* display: inline-block;后 此div下面 无缘无故出现一个空隙 */
 }
 
-section.works nav ol>li {
+section.portfolio nav ol>li {
     float: left;
     line-height: 18px;
     color: #000;
@@ -304,42 +307,57 @@ section.works nav ol>li {
     cursor: pointer;
 }
 
-section.works nav ol>li:nth-child(2) {
+section.portfolio nav ol>li:nth-child(2) {
     padding: 0 45px;
     /* 不用 margin: 0 45px */
 }
 
-section.works nav .progressBar {
+section.portfolio nav .bar {
+    height: 5px;
+    border-radius: 2px;
     margin-top: 10px;
     background-color: #fff;
 }
 
-section.works nav .progressBar>.progressBar-inner {
+section.portfolio nav .bar>.bar-inner {
     position: relative;
-    left: 64%;
-    width: 82px;
 }
 
-section.works .imgContainer {
+section.portfolio nav .bar.state-1>.bar-inner {
+    width: 32px;
+    left: -2px
+}
+
+section.portfolio nav .bar.state-2>.bar-inner {
+    width: 55px;
+    left: 28%;
+}
+
+section.portfolio nav .bar.state-3>.bar-inner {
+    width: 82px;
+    left: 64%;
+}
+
+section.portfolio .works {
     margin-top: 28px;
     position: relative;
 }
 
-section.works .imgContainer div {
+section.portfolio .works div {
     position: absolute;
 }
 
-section.works .imgContainer div.big {
+section.portfolio .works div.big {
     top: 0;
     left: 5px;
 }
 
-section.works .imgContainer div.small {
+section.portfolio .works div.small {
     top: 0;
     right: 5px;
 }
 
-section.works .imgContainer div.small:nth-child(3) {
+section.portfolio .works div.small:nth-child(3) {
     top: 298px;
     right: 5px;
     margin-bottom: 200px
