--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -321,6 +321,7 @@ section.portfolio nav .bar {
 
 section.portfolio nav .bar>.bar-inner {
     position: relative;
+    transition: all 0.5s;
 }
 
 section.portfolio nav .bar.state-1>.bar-inner {
