--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -5,11 +5,8 @@
 
 /* cyrillic */
 @font-face {
-    font-family: 'Open Sans';
-    /* font-style: normal;
-    font-weight: 300; */
-    src: local('Open Sans Light'), local('OpenSans-Light'), url(https://fonts.gstatic.com/s/opensans/v15/mem5YaGs126MiZpBA-UN_r8OVuhpOqc.woff2) format('woff2');
-    unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+    font-family: "Open Sans";
+    src: url(https://fonts.gstatic.com/s/opensans/v15/mem5YaGs126MiZpBA-UN_r8OVuhpOqc.woff2) format('woff2');
 }
 
 * {
@@ -302,7 +299,7 @@ section.portfolio nav ol>li {
     float: left;
     line-height: 18px;
     color: #000;
-    font-weight: 590;
+    font-weight: 600;
     font-family: "Open Sans";
     cursor: pointer;
 }
