--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -285,13 +285,13 @@ section.portfolio {
 }
 
 section.portfolio nav {
-    margin-top: 35px;
+    margin-top: 30px;
 }
 
 section.portfolio nav,
 section.portfolio nav ol {
     display: inline-block;
-    vertical-align: top;
+    vertical-align: middle;
     /* display: inline-block;后 此div下面 无缘无故出现一个空隙 */
 }
 
@@ -312,7 +312,7 @@ section.portfolio nav ol>li:nth-child(2) {
 section.portfolio nav .bar {
     height: 5px;
     border-radius: 2px;
-    margin-top: 10px;
+    margin-top: 12px;
     background-color: #fff;
 }
 
