--- a/demo/nav-page/css/style.css
+++ b/demo/nav-page/css/style.css
@@ -1,7 +1,13 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 kbd {
+    position: relative;
     width: 69px;
     height: 69px;
-    line-height: 69px;
+    line-height: 59px;
     text-align: center;
     font-size: 24px;
     color: #fff;
@@ -12,10 +18,29 @@ kbd {
     border-radius: 8px;
 }
 
-#mainxxx > div:nth-child(2) {
-    margin-left: 15px;
+kbd>button {
+    position: absolute;
+    right: 2px;
+    bottom: 0;
+    border-radius: 5px;
+    outline: none;
+    cursor: pointer;
+    display: none;
 }
 
-#mainxxx > div:nth-child(3) {
-    margin-left: 55px;
+kbd:hover button {
+    display: block;
+}
+
+div.wrapper {
+    width: 43%;
+    margin: 50px auto;
+}
+
+#mainxxx>div:nth-child(2) {
+    margin-left: 20px;
+}
+
+#mainxxx>div:nth-child(3) {
+    margin-left: 65px;
 }
